--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=techjobs
 
 spring.jpa.database = MYSQL
 
-spring.jpa.show-sql = false
+spring.jpa.show-sql = true
 
 spring.jpa.hibernate.ddl-auto = update
 
